2011-07-03  Samuel Thibault  <samuel.thibault@gnu.org>
	    Thomas Schwinge  <thomas@schwinge.name>

	PR binutils/12913
	* config/obj-elf.c (obj_elf_type): Use ELFOSABI_GNU name instead of
	ELFOSABI_LINUX alias.
	* config/tc-ia64.c: Likewise.

2011-06-30  Paul Carroll  <pcarroll@codesourcery.com>

	* config/tc-arm.c (do_t_add_sub): Only allow LSL shifts of less
	than 4 in Thumb mode.

2011-06-30  Nick Clifton  <nickc@redhat.com>

	PR gas/12848
	* config/tc-arm.c (BAD_RANGE): New error message define.
	(md_apply_fix): Use it.
	Fix range check for thumb branch instructions.

2011-06-29  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (append_method): New enum.
	(can_swap_branch_p, get_append_method): New functions.
	(append_insn): Use get_append_method to decide how the instruction
	should be added.

2011-06-29  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (append_insn): Remove bogus goto.

2011-06-29  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (append_insn): Always clear the history after an
	unconditional branch.

2011-06-29  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (find_altered_mips16_opcode): New function.
	(append_insn): Use it.

2011-06-29  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (insn_uses_reg): Delete.
	(gpr_read_mask, gpr_write_mask): New functions.
	(fpr_read_mask, fpr_write_mask): Likewise.
	(insns_between, nops_for_vr4130, append_insn): Use them.

2011-06-29  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (md_mips_end): Call mips_emit_delays.

2011-06-29  Dave Martin  <dave.martin@linaro.org>

	PR gas/12931
	* config/tc-arm.c (mapping_state): When changing to ARM or THUMB
	state set the minimum required alignment of the section.

2011-06-29  Tristan Gingold  <gingold@adacore.com>

	* config/tc-i386.c (i386_mach): Convert to ISO-C.
	(md_begin, pe_directive_secrel, md_estimate_size_before_relax): Ditto.